--- a/client/src/style.css
+++ b/client/src/style.css
@@ -68,6 +68,10 @@ button {
     z-index: 2;
 }
 
+.hidden {
+    display: none;
+}
+
 /* componenten */
 .link {
     position: relative;
@@ -84,13 +88,18 @@ button {
 
 .banner {
     display: flex;
-    height: 15rem;
+    min-height: 15rem;
     justify-content: center;
     align-items: center;
     position: relative;
+    padding-block: 3rem;
 
     div {
         text-align: center;
+    }
+
+    a {
+        font-size: 1rem;
     }
 
     ::after {
@@ -107,28 +116,38 @@ button {
 }
 
 .activiteiten {
-    ul {
+    & > ul {
         padding: 0;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 1rem;
-    }
+        li {
+            background-color: var(--broken-white);
+            padding: 0.5rem 1rem;
+            border-radius: 1rem;
 
-    li {
-        background-color: var(--broken-white);
-        padding: 0.5rem 1rem;
-        border-radius: 1rem;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        div {
             display: flex;
-            width: 100%;
-            flex-direction: row;
-            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
+
+            div {
+                display: flex;
+                width: 100%;
+                flex-direction: row;
+                justify-content: space-between;
+            }
         }
+    }
+}
+
+.sort {
+    display: flex;
+    justify-content: center;
+    ul {
+        padding-left: 1rem;
+        display: flex;
+        gap: 0.5rem;
     }
 }
 
@@ -149,6 +168,112 @@ button {
         flex-wrap: wrap;
         justify-content: space-around;
         gap: 1rem;
+    }
+}
+
+.button {
+    padding: 0.5rem 1rem;
+    background-color: var(--accent);
+    color: var(--bg);
+    border-radius: 10px;
+    border: none;
+    font-size: 1.5rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    & > div {
+        display: flex;
+        flex-direction: column;
+    }
+
+    fieldset {
+        border: 0;
+        padding: 0;
+        display: flex;
+        padding-left: 1rem;
+        flex-direction: column;
+        gap: 1rem;
+
+        legend {
+            margin-left: -1rem;
+            margin-bottom: 0.5em;
+        }
+
+        input{
+            max-width: calc(100% - 1.5rem); 
+        }
+
+        label .field-label{
+            
+            font-size: 1.5rem;
+        }
+    }
+
+
+
+    input {
+        border: 2px solid var(--accent2);
+        border-radius: 10px;
+        padding: 0.5rem 1rem;
+        font-size: xx-large;
+        outline-color: var(--accent3);
+    }
+
+    input.invalid {
+        color: var(--error-color);
+        outline-color: var(--error-color);
+    }
+
+    label > abbr {
+        color: var(--error-color);
+        text-decoration: none;
+    }
+
+
+    span{
+        font-size: 2rem;
+        font-weight: 400;
+
+        &.field-hint {
+            display: inline-block;
+            margin: 0.25em 0em;
+            color: #666;
+            font-size: 1rem;
+
+            ul{
+                list-style: circle;
+            }
+        }
+
+        &.field-error {
+            display: inline-block;
+            margin-top: 0.25em;
+            color: var(--error-color);
+            font-size: 1rem;
+        }
+    }
+
+    .errorSummary {
+        display: none;
+    }
+
+    .profielfoto {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        figure {
+            order: -1;
+            img {
+                border-radius: 30%;
+                height: 10rem;
+                aspect-ratio: 1/1;
+            }
+        }
     }
 }
 
