--- a/client/src/style.css
+++ b/client/src/style.css
@@ -6,6 +6,7 @@
     --black: #010111;
     --primary: var(--black);
     --bg: var(--white);
+    --error-color: #e80202;
     --accent: #e87e04;
     --accent2: #f59d00;
     --accent3: #ffd155;
@@ -33,7 +34,6 @@ html {
 /* UTILITY CLASSES, ATOMS...*/
 figure,
 body {
-    margin: 0;
     position: relative;
 }
 
@@ -43,7 +43,8 @@ body {
     min-height: 100vh;
 
     max-width: 120rem;
-    margin: 0 clamp(1rem, 8vw, 4rem);
+    padding-inline: 2rem;
+    margin: auto;
 }
 
 p {
@@ -120,6 +121,7 @@ button {
         top: 0;
         left: calc(-1 * clamp(1rem, 8vw, 4rem));
         width: 100vw;
+        max-width: 120rem;
         height: 100%;
         z-index: -1;
         background-color: var(--accent2);
@@ -132,30 +134,32 @@ button {
         flex-wrap: nowrap;
         overflow-x: scroll;
     }
+    li {
+        position: relative;
+        background-color: var(--broken-white);
+        padding: 0.5rem 1rem;
+        border-radius: 1rem;
+        min-width: 20rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-    & > ul {
+        div {
+            display: flex;
+            width: 100%;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+    }
+
+    > ul {
         padding: 0;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         gap: 1rem;
-        li {
-            position: relative;
-            background-color: var(--broken-white);
-            padding: 0.5rem 1rem;
-            border-radius: 1rem;
-            min-width: 20rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
 
-            div {
-                display: flex;
-                width: 100%;
-                flex-direction: row;
-                justify-content: space-between;
-            }
-        }
+        justify-content: center;
     }
 }
 
@@ -166,6 +170,16 @@ button {
         padding-left: 1rem;
         display: flex;
         gap: 0.5rem;
+    }
+    button{
+        padding: 0.5rem 1rem;
+        border:2px solid var(--accent);
+        background-color: var(--bg);
+    }
+
+    button.active{
+        background-color: var(--accent3);
+        border-color: var(--accent3);
     }
 }
 
@@ -188,14 +202,27 @@ button {
     align-items: center;
 
     img {
-        width: 5rem;
-        border-radius: 100%;
+        border-radius: 30%;
+        height: 5rem;
+        aspect-ratio: 1/1;
+        object-fit: contain;
     }
 }
 
-.kaart iframe {
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    justify-self: center;
+    align-self: center;
+    max-width: 50rem;
+
+}
+
+.kaart div {
     width: 100%;
-    height: 10rem;
+    height: 15rem;
 }
 
 .bewoners {
@@ -221,6 +248,43 @@ button {
     justify-self: center;
 
     text-align: center;
+}
+
+.deletebtn{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 3;
+
+    width: 2rem;
+    height: 2rem;
+    padding: 0;
+
+    background-color: transparent;
+    border: none;
+
+    span{
+        display: block;
+        width: 2.84rem;
+        height: .2rem;
+        background-color: var(--black);
+
+        position: absolute;
+        left: -.5rem;
+
+        &:nth-child(1){
+            transform: rotate(45deg);
+
+        }
+        &:nth-child(2){
+            transform: rotate(-45deg);
+        }
+    }
+
+    p{
+        display: none;
+    }
+
 }
 
 form {
@@ -309,7 +373,7 @@ form {
 
                 &.field-hint {
                     display: inline-block;
-                    margin: 0.25em 0em;
+                    margin: 0.25em 0;
                     color: #666;
                     font-size: 1rem;
 
@@ -328,7 +392,7 @@ form {
 
             &.field-hint {
                 display: inline-block;
-                margin: 0.25em 0em;
+                margin: 0.25em 0;
                 color: #666;
             }
         }
@@ -336,24 +400,29 @@ form {
 
     .errorSummary {
         display: none;
-    }
-}
-
-.profielfoto {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    flex-direction: column;
-
-    figure {
-        order: -1;
-        img {
-            border-radius: 30%;
-            height: 10rem;
-            aspect-ratio: 1/1;
+        ul{
+            padding-left: 2rem;
+            list-style: square;
         }
     }
 }
+
+/*.profielfoto {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    gap: 0.5rem;*/
+/*    flex-direction: column;*/
+
+/*    figure {*/
+/*        order: -1;*/
+/*        img {*/
+/*            border-radius: 30%;*/
+/*            height: 10rem;*/
+/*            aspect-ratio: 1/1;*/
+/*            object-fit: contain;*/
+/*        }*/
+/*    }*/
+/*}*/
 
 .logo {
     text-align: center;
@@ -488,7 +557,6 @@ main {
     flex-direction: column;
     gap: 2rem;
     position: relative;
-    justify-content: center;
 }
 
 footer {
@@ -507,6 +575,7 @@ footer {
         top: 0;
         left: calc(-1 * clamp(1rem, 8vw, 4rem));
         width: 100vw;
+        max-width: 120rem;
         height: 100%;
         z-index: -1;
         background-color: var(--accent2);
@@ -526,9 +595,6 @@ footer {
         .kaart {
             grid-column: 2;
             grid-row: 4 span;
-            h3 {
-                display: none;
-            }
 
             iframe{
                 height: 100%;
@@ -539,6 +605,10 @@ footer {
             grid-column: span 2;
         }
 
+    }
+
+    .activiteiten > ul{
+        justify-content: left;
     }
 
     header {
@@ -591,15 +661,28 @@ footer {
     }
 
     .profilepicture {
-        img {
+        figure{
             width: 8rem;
+            aspect-ratio: 1/1;
+            img {
+                border-radius: 50%;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
+
     }
 
     form {
+        justify-self: center;
         align-self: center;
         max-width: 50rem;
     }
+}
+
+input[type="file"]{
+    display: none;
 }
 
 /* ANIMATIONS */
@@ -658,3 +741,6 @@ footer {
         opacity: 0;
     }
 }
+
+
+
